# perspective

./: .bazelrc  .gitignore  WORKSPACE  package.json  pnpm-lock.yaml
.github/workflows/: build.yaml
cmake/arrow/: CMakeLists.txt
cmake/re2/: CMakeLists.txt
cpp/perspective/: CMakeLists.txt  build.js
cpp/perspective/src/cpp/: base.cpp  data_table.cpp  gnode.cpp  pool.cpp  scalar.cpp  view.cpp
cpp/perspective/src/include/perspective/: data_table.h  gnode.h  pool.h  raw_types.h  scalar.h  view.h
docs/: package.json
docs/md/: SUMMARY.md
docs/md/explanation/table/: schema.md
docs/md/explanation/view/config/: flattening.md
examples/rust-axum/src/: index.html
rust/perspective/: Cargo.toml  build.rs
rust/perspective-client/: build.rs
rust/perspective-client/src/rust/: lib.rs
rust/perspective-js/: build.js
rust/perspective-js/src/rust/: table.rs
rust/perspective-js/src/ts/: engine.ts  perspective.browser.ts
rust/perspective-js/src/ts/wasm/: browser.ts  decompress.ts  emscripten_api.ts  engine.ts
rust/perspective-python/: Cargo.toml  build.js  package.json  pyproject.toml
rust/perspective-python/perspective/: __init__.py  psp_cffi.py
rust/perspective-python/src/: lib.rs
rust/perspective-python/src/client/: client_sync.rs
rust/perspective-server/: Cargo.toml
rust/perspective-viewer/: BUILD.bazel  build.js  build.rs
rust/perspective-viewer/src/rust/: lib.rs
rust/perspective-viewer/src/rust/components/: column_dropdown.rs  column_selector.rs  datetime_column_style.rs  expression_editor.rs  filter_dropdown.rs  function_dropdown.rs  number_column_style.rs  plugin_selector.rs  render_warning.rs  status_bar.rs  string_column_style.rs  viewer.rs
rust/perspective-viewer/src/rust/components/column_selector/: aggregate_selector.rs  config_selector.rs  empty_column.rs  filter_column.rs
rust/perspective-viewer/src/rust/components/containers/: dropdown_menu.rs  radio_list.rs  scroll_panel.rs  split_panel.rs
rust/perspective-viewer/src/rust/components/form/: code_editor.rs
rust/perspective-viewer/src/rust/components/style/: mod.rs  style_cache.rs
rust/perspective/cpp/: ffi.cpp  ffi.h  types.h
rust/perspective/crates/api/: Cargo.toml  build.rs
rust/perspective/crates/api/src/: api.rs  view_config.rs
rust/perspective/crates/ffi/: Cargo.toml  build.rs
rust/perspective/crates/ffi/cpp/: ffi.cpp  ffi.h  types.h
rust/perspective/crates/ffi/src/: ffi.rs
rust/perspective/crates/js/: Cargo.toml  build.rs
rust/perspective/crates/js/src/: console_tracing.rs  js.rs
rust/perspective/crates/server/: Cargo.toml  build.rs
rust/perspective/crates/server/src/: main.rs
rust/perspective/protos/: perspective.proto
rust/perspective/src/: api.rs  cpp_common.rs  ffi.rs  js.rs  lib.rs
rust/perspective/www/: bench_cpp.ts  bench_rs.ts  index.html  index.ts  msg.ts  package.json  perspective_bg.js  tsconfig.json  worker.ts
tools/perspective-scripts/: install_llvm.mjs  lint_cpp.mjs
