[workspace]
resolver = "2"
members = ["crates/ffi", "crates/js", "crates/api"]
default-members = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]


[profile.release]
# lto = "thin"

[workspace.dependencies]
async-trait = "0.1.74"
cxx = "1.0.109"
link-cplusplus = { version = "1.0.9", features = ["libc++"] }
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["sync"] }
wasm-bindgen = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }
wasm-bindgen-futures = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }
web-sys = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi", features = [
  "WebSocket",
  "MessageEvent",
  "BinaryType",
] }
js-sys = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }

# [workspace.build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0.109"
prost-build = "0.12.1"
