[workspace]
resolver = "2"
members = ["crates/ffi", "crates/js", "crates/api", "crates/server"]
default-members = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib"]


[profile.release]
lto = "fat"

[workspace.dependencies]
async-trait = "0.1.74"
cxx = "1.0.109"
link-cplusplus = { version = "1.0.9", features = ["nothing"] }
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["sync"] }
wasm-bindgen = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }
wasm-bindgen-futures = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }
web-sys = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi", features = [
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "PerformanceMark",
  "Window",
  "Document",
  "Performance",
  "HtmlElement",
  "Navigator",
  "Clipboard",
] }
js-sys = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }

# [workspace.build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0.109"
prost-build = "0.12.1"

axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-extra = { version = "0.8.0", features = ["typed-routing"] }
futures = "0.3.28"
prost-types = "0.12.1"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["release_max_level_error"] }
num_enum = "0.7.1"
itertools = "0.11.0"

poll-promise = { version = "0.3.0", features = ["tokio"] }
extend = "1.2.0"

vcpkg = "0.2.15"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0.192", features = ["derive"] }
arrow-ipc = { version = "48.0.0", features = ["lz4"] }
arrow-schema = "48.0.0"
arrow-array = "48.0.0"
arrow-buffer = "48.0.0"
thiserror = "1.0.50"
chrono = { version = "0.4.31", default_features = false }

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }
wasm-bindgen-futures = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }
web-sys = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi", features = [
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "PerformanceMark",
  "Window",
  "Document",
  "Performance",
  "HtmlElement",
  "Navigator",
  "Clipboard",
] }
js-sys = { git = "https://github.com/Rob2309/wasm-bindgen.git", branch = "wasi-abi" }
