[package]
name = "perspective-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/api.rs"


[dependencies]
async-trait.workspace = true
cxx.workspace = true
link-cplusplus.workspace = true
prost.workspace = true
tokio.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
js-sys.workspace = true

[build-dependencies]
prost-build.workspace = true
