[package]
name = "perspective-ffi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/ffi.rs"

[dependencies]
cxx.workspace = true
wasm-bindgen.workspace = true
link-cplusplus.workspace = true
tokio.workspace = true
js-sys.workspace = true
prost-types.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
chrono.workspace = true

perspective-api = { path = "../api" }

[build-dependencies]
cxx-build.workspace = true
cmake.workspace = true
