[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perspective-api = { path = "../api" }
perspective-ffi = { path = "../ffi" }

axum.workspace = true
axum-extra.workspace = true
futures.workspace = true
prost-types.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1.33.0", features = ["full"] }
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
